mdapioutput/objects/Visit_Action__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visit Actions</relationshipLabel>
        <relationshipName>Visit_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action</label>
        <referenceTo>CORE_Action__c</referenceTo>
        <relationshipLabel>Visit Actions</relationshipLabel>
        <relationshipName>Visit_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionName__c</fullName>
        <formula>ActionId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Pharma Activity</label>
        <referenceTo>CTPHARMA__Activity__c</referenceTo>
        <relationshipLabel>Visit Actions</relationshipLabel>
        <relationshipName>Visit_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply to Visit</label>
        <type>Checkbox</type>
    </fields>
    <label>Visit Action</label>
    <nameField>
        <displayFormat>VA-{00000}</displayFormat>
        <label>Visit Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>